[package]
name = "prosemirror"
version = "0.1.0"
authors = ["Xiphoseer"]
edition = "2018"

[features]
cmark = ["pulldown-cmark", "pulldown-cmark-to-cmark"]

[dev-dependencies]
serde_json = "1.0.53"

[dependencies]
derivative = "2.1.1"
thiserror = "1.0"
displaydoc = "0.1"
derive-new = "0.5"
pulldown-cmark = { version = "0.7", optional = true }
pulldown-cmark-to-cmark = { version = "4.0", optional = true }

[dependencies.serde]
version = "1.0.97"
features = ["derive"]
