[package]
name = "prosemirror-markdown"
version = "0.1.0"
authors = ["daniel"]
edition = "2018"

[features]
cmark = ["pulldown-cmark", "pulldown-cmark-to-cmark"]

[dev-dependencies]
serde_json = "1.0.53"
thiserror = "1.0"
displaydoc = "0.1"

[dependencies]
derivative = "2.2.0"
prosemirror-model = { path = "../model" }
prosemirror-transform = { path = "../transform" }
prosemirror-derive = { path = "../derive" }
pulldown-cmark = { version = "0.7", optional = true }
pulldown-cmark-to-cmark = { version = "4.0", optional = true }

[dependencies.serde]
version = "1.0.97"
features = ["derive"]