[package]
name = "prosemirror-transform"
version = "0.1.0"
authors = ["Xiphoseer"]
edition = "2018"

[dev-dependencies]
serde_json = "1.0.53"

[dependencies]
prosemirror-model = { path = "../model" }
derivative = "2.2.0"
thiserror = "1.0"
displaydoc = "0.1"
derive-new = "0.5"

[dependencies.serde]
version = "1.0.97"
features = ["derive"]
